version/0.19/_sources/api/solver/_autosummary/settings/customized_udf.rst.txt
:orphan:

.. _customized_udf:

customized_udf
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.customized_udf.customized_udf
    :show-inheritance:

.. rubric:: Attributes

================================   ================================

Attribute                                                   Summary

================================   ================================
:ref:`enabled <enabled_14>`            Use customized addon module.

:ref:`source_file <source_file>`               'source_file' child.

================================   ================================

.. rubric:: Methods

================================================================   =====================================

Method                                                                                           Summary

================================================================   =====================================
:ref:`create_customized_addon_lib <create_customized_addon_lib>`       Compile customized addon library.

================================================================   =====================================

.. rubric:: Included in:

==================   ==============================

Parent                                      Summary

==================   ==============================
:ref:`sofc <sofc>`       Enter SOFC model settings.

==================   ==============================

