version/0.23/_sources/api/solver/_autosummary/settings/customized_udf.rst.txt
:orphan:

.. _customized_udf:

customized_udf
==============

.. autoclass:: ansys.fluent.core.generated.solver.settings_242.customized_udf.customized_udf
    :show-inheritance:

.. rubric:: Attributes

================================   ==========================================

Attribute                                                             Summary

================================   ==========================================
:ref:`enabled <enabled_32>`            Enable/disable customized SOFC module.

:ref:`source_file <source_file>`                     Specify UDF source file.

================================   ==========================================

.. rubric:: Methods

================================================================   =======================================================

Method                                                                                                             Summary

================================================================   =======================================================
:ref:`create_customized_addon_lib <create_customized_addon_lib>`                          Create customized addon library.

:ref:`copy_user_source_file <copy_user_source_file>`                   Copy user modifiable file to the working directory.

================================================================   =======================================================

.. rubric:: Included in:

==================   ==============================

Parent                                      Summary

==================   ==============================
:ref:`sofc <sofc>`       Enter SOFC model settings.

==================   ==============================

